--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
+#root{
+  background-color: rgb(37, 37, 37);
+}
+
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
+
 
 .logo {
   height: 6em;
